--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
+    "root": true,
     "env": {
         "node": true,
-        "es6": true
+        "es6": true,
+        "mocha": true
     },
     "extends": "eslint:recommended",
     "rules": {
